--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,10 +374,13 @@ h1, h2, h3, h4, h4, h5, h6{
 .stat-nums{
 	font-size: 72px;
 	font-weight: 700;
+
+	text-align: center;
 }
 
 .stat-text{
 	font-size: 14px;
 
 	text-transform: uppercase;
+	text-align: center;
 }
